# RustBevyTest

./: .#todo.txt  .ignore  Cargo.toml  Makefile  README.org  check.sh  grep  ramdisk.sh  todo.org  todo.txt
.cargo/: config.toml
src/: .#model.rs  main.rs  meshes.rs  model.rs  physics.rs  query_utils.rs  setup.rs  systems.rs
