[package]
name = "bevytest"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
bevy_rapier3d = { version = "0.11.0", features = [ "simd-stable" ] }
rand = "0.8.4"
#[toolchain]
#channel = "nightly"